generated/checkers/gen/AllGen-Double-Free-e61dd678601eac53d501dda1eb1bcffec7b11bd6/build_logs/syntax-repair-04/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::recordManualFreeOfField(const clang::ento::MemRegion*, const clang::FieldDecl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:135:19: error: no matching function for call to ‘llvm::ImmutableSet<const clang::FieldDecl*>::ImmutableSet()’
  135 |   FreedFieldSetTy Set;
      |                   ^~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableMap.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/Environment.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:971:12: note: candidate: ‘llvm::ImmutableSet<ValT, ValInfo>::ImmutableSet(llvm::ImmutableSet<ValT, ValInfo>::TreeTy*) [with ValT = const clang::FieldDecl*; ValInfo = llvm::ImutContainerInfo<const clang::FieldDecl*>; llvm::ImmutableSet<ValT, ValInfo>::TreeTy = llvm::ImutAVLTree<llvm::ImutContainerInfo<const clang::FieldDecl*> >]’
  971 |   explicit ImmutableSet(TreeTy *R) : Root(R) {}
      |            ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:971:12: note:   candidate expects 1 argument, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:957:7: note: candidate: ‘llvm::ImmutableSet<const clang::FieldDecl*>::ImmutableSet(const llvm::ImmutableSet<const clang::FieldDecl*>&)’
  957 | class ImmutableSet {
      |       ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:957:7: note:   candidate expects 1 argument, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:957:7: note: candidate: ‘llvm::ImmutableSet<const clang::FieldDecl*>::ImmutableSet(llvm::ImmutableSet<const clang::FieldDecl*>&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:957:7: note:   candidate expects 1 argument, 0 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
